--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -4384,7 +4384,7 @@ input[type=submit].btn-block {
     flex-direction: column;
     padding-left: 0;
     margin-bottom: 0;
-    list-style: none
+    list-style: none;
 }
 
 .navbar-nav .nav-link {
@@ -10673,7 +10673,9 @@ a:focus {
 #wrapper {
     display: flex
 }
-
+#content{
+    background-color: #f0f0f0;
+}
 #wrapper #content-wrapper {
     background-color: #f8f9fc;
     width: 100%;
@@ -11265,10 +11267,10 @@ a:focus {
     white-space: nowrap
 }
 
-.sidebar .nav-item .collapse .collapse-inner .collapse-item:hover,
+/* .sidebar .nav-item .collapse .collapse-inner .collapse-item:hover,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item:hover {
     background-color: #eaecf4
-}
+} */
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item:active,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item:active {
@@ -11348,7 +11350,8 @@ a:focus {
 
 @media (min-width:768px) {
     .sidebar {
-        width: 14rem !important
+        width: 20rem !important;
+        background: #209fa4;
     }
 
     .sidebar .nav-item .collapse {
@@ -11407,7 +11410,7 @@ a:focus {
     .sidebar .nav-item .nav-link[data-toggle=collapse].collapsed::after {
         content: '\f105'
     }
-
+    
     .sidebar .sidebar-brand .sidebar-brand-icon i {
         font-size: 2rem
     }
@@ -12238,4 +12241,15 @@ footer.sticky-footer .copyright {
 
 body.sidebar-toggled footer.sticky-footer {
     width: 100%
+}
+
+  
+.logo_header img {
+    width: 200px;
+    height: 53px;
+    margin-top: 50px;
+    margin-left: 20px;
+}
+.input-group-append button{
+    background-color: #209fa4;
 }
