--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,8 +1,8 @@
-.row{
+/* .row{
     display: flex;
     justify-content: center;
     gap: 20px;
-}
+} */
 .overview{
     display: flex;
     flex-direction: column;
@@ -44,7 +44,7 @@
     margin-left: 10px;
     margin-top: 40px;
     background: #fff;
-    width: 360px;
+    width: 100%;
     height: 150px;
     padding: 10px;
     position: relative;
@@ -224,3 +224,100 @@
     display: none; /* cho Chrome, Safari, and Opera */
 }
 
+.title_page{
+    color: #01a9ac;
+    width: 100%;
+    padding: 20px 0px;
+    background-color: #fff;
+    text-align: center;
+    border: 1px solid #f5f5f5;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.box_content{
+    background-color: #fff;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    padding:50px;
+    margin-top: 30px;
+}
+
+
+.input-text{
+    width: 100%;
+    border: 1px solid gray;
+}
+.w-45{
+    width: 45%;
+}
+
+.form__container {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    border: 2px dashed silver;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    color: silver;
+    margin-bottom: 5px;
+  }
+  .form__container.active {
+    background-color: rgba(192, 192, 192, 0.2);
+  }
+  .form__file {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    opacity: 0;
+  }
+  .form__files-container {
+    display: block;
+    width: 100%;
+    font-size: 0;
+    margin-top: 20px;
+  }
+  .form__image-container {
+    display: inline-block;
+    width: 49%;
+    height: 200px;
+    margin-bottom: 10px;
+    position: relative;
+  }
+  .form__image-container:not(:nth-child(2n)) {
+    margin-right: 2%;
+  }
+  .form__image-container:after {
+    content: "✕";
+    position: absolute;
+    line-height: 200px;
+    font-size: 30px;
+    margin: auto;
+    top: 0;
+    right: 0;
+    left: 0;
+    text-align: center;
+    font-weight: bold;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.4);
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+  }
+  .form__image-container:hover:after {
+    opacity: 1;
+    cursor: pointer;
+  }
+  .form__image {
+    -o-object-fit: contain;
+       object-fit: contain;
+    width: 100%;
+    height: 100%;
+  }
+  .ck.ck-editor{
+    width: 100% !important;
+  }
+  .ck-content {
+    height: 500px;
+  }
