--- a/public/css/style.css
+++ b/public/css/style.css
@@ -706,10 +706,13 @@ a {
 .box__favorite__product {
   border: 1px solid rgb(195, 195, 195);
   padding: 5px 10px 20px 10px;
-  height: 370px;
   border-radius: 5px;
   background-color: white;
   position: relative;
+}
+
+.box__favorite__product>p {
+  height: 48px;
 }
 
 .box__favorite__product:hover {
@@ -755,6 +758,7 @@ a {
 .p__hover {
   color: #000000;
   font-weight: 500;
+  height: 48px;
 }
 
 .p__hover:hover {
@@ -1242,9 +1246,11 @@ span.p__red {
   background-color: #F0F0F0;
   padding: 50px 0;
 }
-.breadcrumb{
+
+.breadcrumb {
   margin-bottom: 0;
 }
+
 .sidebar {
   border: 1px solid rgb(214, 214, 214);
   border-radius: 10px;
