--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1656,7 +1656,13 @@ span.p__red {
 .form .input {
   border-bottom: 1px dashed rgb(220, 220, 220);
   display: flex;
+  flex-direction: column;
   margin: 30px 10px;
+}
+
+.error {
+  color: red;
+  font-size: 13px;
 }
 
 .form p {
