--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -12242,3 +12242,9 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
     width: 100%
 }
+
+
+.error {
+    font-size: 13px;
+    color: red;
+}
